--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Akash Suresh E.k profile picture" />
+        <img src="./assets/WhatsApp Image 2024-12-06 at 16.51.17_d55ce039.jpg" alt="Akash Suresh E.k profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -45,7 +45,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/AkashSuresh EK Resume.pdf', '_blank')"
           >
             Download CV
           </button>
@@ -75,7 +75,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/IMG-20230219-WA0010.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -345,7 +345,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:akashsureshek@gmail.com">akashsureshek@gmail.com</a></p>
+          <p><a href="mailto:akashsureshek@gmail.com">aakashsureshek@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
